git add . git commit -m "commited" git push